# QSync

./: .eslintrc  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  .tokeignore  README.md  buf.gen.yaml  env.template  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.ts  test.html  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
protos/: musync.proto
rfcs/: 0001-local-music-player.md  0002-multi-platform-multi-source.md
src/: App.vue  main.ts  router.ts  style.css  style.postcss  theme.ts
src-tauri/: .gitignore  Cargo.toml  README.md  deny.toml  tauri.conf.json
src-tauri/abi/: Cargo.toml  build.rs
src-tauri/abi/protos/: musync.proto
src-tauri/abi/src/: lib.rs  utils.rs
src-tauri/abi/src/pb/: google.protobuf.rs  mod.rs  musync.rs
src-tauri/abi/src/share/: mod.rs  musync.rs
src-tauri/abi/src/types/: mod.rs  musync.rs  user.rs
src-tauri/dbm/: Cargo.toml
src-tauri/dbm/src/: error.rs  lib.rs  manager.rs  player.rs  playlist.rs  search.rs  track.rs  user.rs
src-tauri/entity/src/: lib.rs  local_src.rs  local_src_folder.rs  netease_src.rs  play_queue.rs  play_queue_track.rs  playback.rs  playlist.rs  playlist_track.rs  prelude.rs  track.rs  user.rs  user_playlist.rs
src-tauri/icons/: icon.icns
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20230813_000001_create_table.rs  m20231204_162103_add_ncm_src.rs
src-tauri/migrations/: 20230204141142_musync.down.sql  20230204141142_musync.up.sql  20230204154805_musync_trigger.down.sql  20230204154805_musync_trigger.up.sql
src-tauri/musync/: Cargo.toml
src-tauri/musync/src/: error.rs  lib.rs  manager.rs
src-tauri/server/: Cargo.toml
src-tauri/server/examples/: client.rs  server.rs
src-tauri/server/src/: error.rs  grpc.rs  lib.rs  user.rs  ws.rs
src-tauri/server/src/musync/: mod.rs  track.rs
src-tauri/src/: error.rs  main.rs  player.rs  track.rs
src-tauri/utils/src/: lib.rs
src/api/: client.ts
src/components/: Button.vue  HoverLayer.vue  List.vue  LongButton.vue  MenuItem.vue  MusicPlayer.vue  Navigator.vue  QButton.vue  QCard.vue  QConfigProvider.vue  QHoverButton.vue  QHoverText.vue  QImage.vue  QInput.vue  QInputRow.vue  QList.vue  QMenu.vue  QPlayer.vue  QPopover.vue  QRadio.vue  QScrollbar.vue  QSelect.vue  QSlider.vue  QTable.vue  TitleBar.vue  injects.ts  keys.ts  types.ts
src/components/typo/: H1.vue  H2.vue
src/layouts/: Basic.vue
src/locales/: en.yaml  zh-CN.yaml
src/logic/: index.ts  theme.ts
src/model_ext/: ncm.ts  track.ts
src/pages/: Account.vue  Home.vue  Lyric.vue  Main.vue  MusicLib.vue  Playback.vue  Settings.vue  Source.vue  router.ts
src/pages/main/: Account.vue  Home.vue  MusicLib.vue  PlayQueue.vue  Playback.vue  SearchResult.vue  Settings.vue  Source.vue  Track.vue  router.ts
src/qui/: QScrollbar.vue  index.ts  injects.ts
src/qui/pivot/: QHorizontalMenu.vue  QPivot.vue  QPivotItem.vue  TabHeadItem.vue  index.ts  types.ts
src/qui/table/: QTable.vue  index.ts  types.ts
src/sources/folder/: index.ts
src/sources/jellyfin/: ConnectionState.ts  apiclient.d.ts  index.ts  util.ts
src/store/: index.ts  player.ts  user.ts
src/utils/: apphost.ts  browser.ts  index.ts  logger.ts  theme.ts
