[package]
name = "qsync"
version = "0.1.0"
description = "QSync"
authors = ["discreater"]
license = ""
repository = ""
default-run = "qsync"
edition = "2021"
rust-version = "1.59"

[workspace]
members = [".", "abi", "dbm", "migration", "entity", "server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [ "protocol-asset", "fs-read-dir", "fs-rename-file", "fs-exists", "fs-read-file", "dialog-open", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
dbm = { path = "dbm" }
lofty = "0.15.0"
id3 = "1.7.0"
thiserror = "1.0.44"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
abi = { version = "0.1.0", path = "abi" }
base64 = "0.21.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
server = { path = "server" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
