[package]
name = "qsync"
version = "0.1.0"
description = "QSync"
authors = ["discreater"]
license = ""
repository = ""
edition = "2021"

[workspace]
members = [".", "abi", "dbm", "migration", "entity", "server", "utils"]

[workspace.dependencies]
tokio = "1.31.0"
tokio-util = "0.7.8"
tokio-stream = "0.1"
prost = "0.12"
prost-types = "0.12"
tonic = "0.10"
tonic-build = "0.10"
tonic-web = "0.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sea-orm = "0.12"
sea-orm-migration = "0.12"
thiserror = "1"
anyhow = "1"
chrono = "0.4.28"
serde = "1"
serde_json = "1"
futures = "0.3.28"
futures-channel = "0.3.25"
futures-util = "0.3.25"
dotenvy = "0.15.7"
# ncmapi = { path="../../ncmapi-rs" }
ncmapi = { git="https://github.com/Discreater/ncmapi-rs" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri = { version = "2.0.0-alpha.17", features = [
  "protocol-asset",
  "devtools",
] }
tauri-plugin-log = { version = "2.0.0-alpha", features = ["colored"] }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
dbm = { path = "dbm" }
thiserror = { workspace = true }
abi = { path = "abi" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
server = { path = "server" }
dotenvy = { workspace = true }
window-shadows = "0.2.2"
log = "0.4.20"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
