[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"
prost-types = "0.11.6"
sqlx = { version = "0.6.2", features = ["chrono", "sqlite", "macros", "migrate", "uuid", "runtime-tokio-rustls"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
