[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
prost-types = "0.11.9"
thiserror = "1"
tonic = "0.9.2"
entity = { path = "../entity" }
chrono = "0.4.26"

[build-dependencies]
tonic-build = "0.9.2"
