[package]
name = "dbm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1"
async-trait = "0.1.73"
thiserror = "1"
tracing = "0.1.37"
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-json" ] }
migration = { path = "../migration" }
entity = { path = "../entity" }
chrono = "0.4.26"
tonic = "0.9.2"
jieba-rs = "0.6"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1"
tantivy = "0.20.2"
utils = { path = "../utils" }
debounced = { git = "https://github.com/Discreater/debounced" }
futures-channel = { version = "0.3.25", features = ["sink"] }
futures-util = { version = "0.3.25", default-features = false, features = ["sink"] }

[dev-dependencies]
tracing-subscriber = "0.3.16"
