[package]
name = "dbm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = { workspace = true }
async-trait = "0.1.73"
thiserror = { workspace = true }
tracing = { workspace = true }
sea-orm = { workspace = true, features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "with-json",
] }
migration = { path = "../migration" }
entity = { path = "../entity" }
chrono = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
utils = { path = "../utils" }
debounced = { git = "https://github.com/Discreater/debounced" }
futures-channel = { workspace = true, features = ["sink"] }
futures-util = { workspace = true, features = ["sink"] }


[dev-dependencies]
tracing-subscriber = { workspace = true }
