[package]
name = "musync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.68"
async-trait = "0.1.64"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }
thiserror = "1.0.38"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full"] }
# sqlx-db-tester = { path = "../../../sqlx-db-tester"}
sqlx-db-tester = { git = "https://github.com/Discreater/sqlx-db-tester", branch = "sqlite"}
tracing-subscriber = "0.3.16"
