[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.31.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }

axum = { version = "0.6.20", features = ["ws", "headers"] }
axum-server = "0.5.1"
axum-typed-websockets = "0.5.0"
tower = { version = "0.4.13", features = ["make", "steer"] }
tower-http = { version = "0.4.3", features = ["cors"] }

http = "0.2.9"
tonic = "0.9.2"
tonic-web = "0.9.2"
hyper = "0.14.27"

chrono = { version = "0.4.26", features = ["serde"] }
serde = "1.0.183"
thiserror = "1.0.46"
lofty = "0.15.0"
base64 = "0.21.2"
abi = { path = "../abi" }
dbm = { path = "../dbm" }
tracing = "0.1.37"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
futures = "0.3.28"
mime_guess = "2.0.4"
dashmap = "5.5.1"
utils = { path = "../utils" }
# ncmapi = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3.16"
serde_json = "1.0"
dotenvy = "0.15.7"
prost = "0.11.9"
