[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }

axum = { version = "0.6.20", features = ["ws", "headers"] }
axum-server = "0.5.1"
axum-typed-websockets = "0.5.0"
tower = { version = "0.4.13", features = ["make", "steer"] }
tower-http = { version = "0.4.3", features = ["cors"] }

http = "0.2.9"
tonic = { workspace = true }
tonic-web = { workspace = true }
hyper = "0.14.27"

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
lofty = "0.15.0"
base64 = "0.21"
abi = { path = "../abi" }
dbm = { path = "../dbm" }
tracing = { workspace = true }
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
futures = { workspace = true }
mime_guess = "2.0.4"
dashmap = "5.5.1"
utils = { path = "../utils" }
# ncmapi = { path="../../../ncmapi-rs" }
ncmapi = { git="https://github.com/Discreater/ncmapi-rs" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
prost = { workspace = true }
