[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }

axum = { version = "0.7.2", features = ["ws"] }
axum-extra = "0.9.0"
# FIXME axum server with axum 0.7 not published yet
axum-server = { git = "https://github.com/programatik29/axum-server.git", rev = "5d3c2ce" }
# FIXME axum typed websockets with axum 0.7 not published yet
axum-typed-websockets = { git = "https://github.com/rakshith-ravi/axum-typed-websockets.git", rev = "6473731" }
tower = { version = "0.4.13", features = ["make", "steer"] }
tower-http = { version = "0.5.0", features = ["cors"] }

http = "1.0"
tonic = { workspace = true }
tonic-web = { workspace = true }
hyper = "1.0"

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

thiserror = { workspace = true }
lofty = "0.17"
base64 = "0.21"
abi = { path = "../abi" }
dbm = { path = "../dbm" }
tracing = { workspace = true }
jsonwebtoken = "9.2"
once_cell = "1.18.0"
futures = { workspace = true }
mime_guess = "2.0.4"
dashmap = "5.5.1"
utils = { path = "../utils" }
# ncmapi = { path="../../../ncmapi-rs" }
ncmapi = { git = "https://github.com/Discreater/ncmapi-rs" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
prost = { workspace = true }
http-body-util = "0.1.0"
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
